--- a/Models/Diffusion/2024.08.25_SimpleSpeech2.md
+++ b/Models/Diffusion/2024.08.25_SimpleSpeech2.md
@@ -67,15 +67,15 @@ Demos are available on: https://dongchaoyang.top/SimpleSpeech2_demo/.
 
 ## 1.Introduction: 引言
 
-Text-to-Speech synthesis (TTS) endeavors to synthesize speech that is both intelligible and natural at a human level, a field that has witnessed significant advancements over the past few years due to the proliferation of deep learning technologies ([Tacotron2 [1]](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [FastSpeech2 [2]](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); [VITS [3]](../E2E/2021.06.11_VITS.md); [Glow-TTS [4]](../TTS2_Acoustic/2020.05.22_Glow-TTS.md); [Grad-TTS [5]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [TransformerTTS [6]](../TTS2_Acoustic/2018.09.19_TransformerTTS.md); [NaturalSpeech [7]](../E2E/2022.05.09_NaturalSpeech.md)).
+Text-to-Speech synthesis (TTS) endeavors to synthesize speech that is both intelligible and natural at a human level, a field that has witnessed significant advancements over the past few years due to the proliferation of deep learning technologies ([Tacotron2 [1]](../Acoustic/2017.12.16_Tacotron2.md); [FastSpeech2 [2]](../Acoustic/2020.06.08_FastSpeech2.md); [VITS [3]](../E2E/2021.06.11_VITS.md); [Glow-TTS [4]](../Acoustic/2020.05.22_Glow-TTS.md); [Grad-TTS [5]](../Acoustic/2021.05.13_Grad-TTS.md); [TransformerTTS [6]](../Acoustic/2018.09.19_TransformerTTS.md); [NaturalSpeech [7]](../E2E/2022.05.09_NaturalSpeech.md)).
 These TTS models have successfully synthesized speech that is not only intelligible but also of high quality, albeit generally limited to specific styles, speakers, and languages.
 This limitation primarily stems from the fact that they are trained on small-scale, high-quality, labeled speech datasets.
 At a high level of modeling, previous TTS models are usually categorized into two types: auto-regressive (AR) and non-auto-regressive (NAR) models.
-Generally, NAR-based models outperform AR-based models in terms of generation speed and robustness ([FastSpeech2 [2]](../TTS2_Acoustic/2020.06.08_FastSpeech2.md)).
-However, AR-based models exhibit superior diversity, prosody, expressiveness, and flexibility, attributable to their implicit duration modeling and AR sampling strategy ([Tacotron2 [1]](../TTS2_Acoustic/2017.12.16_Tacotron2.md)).
-Furthermore, many NAR-based models ([FastSpeech2 [2]](../TTS2_Acoustic/2020.06.08_FastSpeech2.md)) depend on fine-grained alignment information (phoneme-level duration), which complicates data pre-processing.
-Although numerous studies ([Grad-TTS [5]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [Glow-TTS [4]](../TTS2_Acoustic/2020.05.22_Glow-TTS.md); [VITS [3]](../E2E/2021.06.11_VITS.md)) have suggested employing the Monotonic Alignment Search (MAS) strategy to learn alignment information, this approach not only increases training complexity but also results in alignments that may not always be suitable.
-Most critically, the rigid boundary between phoneme and speech representation can lead to unnatural prosody ([Seed-TTS [8]](../Speech_LLM/2024.06.04_Seed-TTS.md)).
+Generally, NAR-based models outperform AR-based models in terms of generation speed and robustness ([FastSpeech2 [2]](../Acoustic/2020.06.08_FastSpeech2.md)).
+However, AR-based models exhibit superior diversity, prosody, expressiveness, and flexibility, attributable to their implicit duration modeling and AR sampling strategy ([Tacotron2 [1]](../Acoustic/2017.12.16_Tacotron2.md)).
+Furthermore, many NAR-based models ([FastSpeech2 [2]](../Acoustic/2020.06.08_FastSpeech2.md)) depend on fine-grained alignment information (phoneme-level duration), which complicates data pre-processing.
+Although numerous studies ([Grad-TTS [5]](../Acoustic/2021.05.13_Grad-TTS.md); [Glow-TTS [4]](../Acoustic/2020.05.22_Glow-TTS.md); [VITS [3]](../E2E/2021.06.11_VITS.md)) have suggested employing the Monotonic Alignment Search (MAS) strategy to learn alignment information, this approach not only increases training complexity but also results in alignments that may not always be suitable.
+Most critically, the rigid boundary between phoneme and speech representation can lead to unnatural prosody ([Seed-TTS [8]](../SpeechLM/2024.06.04_Seed-TTS.md)).
 
 Recently, an increasing number of researchers have concentrated on synthesizing diverse and natural speech, particularly focusing on the diversity of speaking styles, achieving human-level naturalness, and zero-shot speaker cloning.
 To achieve these objectives, they propose utilizing large-scale datasets to train Text-to-Speech (TTS) models ([AudioLM [9]](../SpeechLM/2022.09.07_AudioLM.md); \cite{valle,speartts,uniaudio,make-a-voice}.
@@ -86,7 +86,7 @@ Moreover, these models are capable of generating expressive and diverse speech, 
 However, they suffer from slow and unstable generation due to the nature of AR sampling.
 To mitigate these drawbacks, large-scale non-autoregressive (NAR) models \cite{soundstorm,ns2,voicebox,megatts} have been proposed, such as NaturalSpeech 2/3.
 Although NAR-based large-scale TTS models exhibit higher inference speeds and enhanced stability, they require extra effort in data pre-processing, such as using their internal alignment tools to secure the alignment between speech and phonemes \cite{ns2,ns3}.
-Additionally, the persistent issue of hard boundary alignment continues to limit the natural prosody in NAR-based models ([Seed-TTS [8]](../Speech_LLM/2024.06.04_Seed-TTS.md)).
+Additionally, the persistent issue of hard boundary alignment continues to limit the natural prosody in NAR-based models ([Seed-TTS [8]](../SpeechLM/2024.06.04_Seed-TTS.md)).
 We summarize the strengths and potential weaknesses for current AR-based and NAR-based large-scale TTS models in Table \ref{tab1}.
 We can see that both AR-based and NAR-based large TTS models still have considerable room for improvement in terms of performance, efficiency, or data requirements.
 Consequently, the primary research question is **whether we can develop a simple, efficient, and stable TTS system capable of synthesizing diverse, natural, and controllable speech**.
@@ -165,7 +165,7 @@ Our recent publication SimpleSpeech \cite{simplespeech} proposes to use a senten
 In this study, we follow the line of our previous publication SimpleSpeech uses sentence duration to control the speech length.
 In addition, we investigate more strategies to obtain the sentence duration, refer to Section \ref{sec:sentence duration} to find the details.
 
-We notice that some concurrent works, [Seed-TTS [8]](../Speech_LLM/2024.06.04_Seed-TTS.md) and DiTTo-TTS \cite{ditto-tts} also adopt a similar idea to use the sentence duration to control the generated speech length in an NAR framework.
+We notice that some concurrent works, [Seed-TTS [8]](../SpeechLM/2024.06.04_Seed-TTS.md) and DiTTo-TTS \cite{ditto-tts} also adopt a similar idea to use the sentence duration to control the generated speech length in an NAR framework.
 We claim that our study is one of the earliest works to adopt this idea, and our proposed method is different from theirs.
 
 ### 2.3.Diffusion Models
@@ -398,8 +398,8 @@ Following SimpleSpeech \cite{simplespeech}, we can use the in-context learning o
 Specifically, we write a simple prompt for ChatGPT, and ask ChatGPT to predict a coarse sentence duration based on the length and the pronunciation of each words.
 Considering the ChatGPT is not stable, we call the ChatGPT 5 times for each text, and then get the average duration time.
 **Obtaining sentence duration from teacher models**
-Previous NAR TTS models ([FastSpeech2 [2]](../TTS2_Acoustic/2020.06.08_FastSpeech2.md))\cite{ns2} has a phoneme duration predictor module, we can easily obtain the duration of each phoneme, and then we can sum them to get the final sentence duration.
-We use the phoneme duration predictor from open sourced [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) model in [Github](https://github.com/ming024/FastSpeech2).
+Previous NAR TTS models ([FastSpeech2 [2]](../Acoustic/2020.06.08_FastSpeech2.md))\cite{ns2} has a phoneme duration predictor module, we can easily obtain the duration of each phoneme, and then we can sum them to get the final sentence duration.
+We use the phoneme duration predictor from open sourced [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md) model in [Github](https://github.com/ming024/FastSpeech2).
 To increase the diversity, we add a \textit{scale factor} for each phoneme duration, the scale factor is a random value, which belongs to $[0.9, 1.3]$.
 Note that we only use this module to obtain a coarse sentence duration, which does not introduce additional complexity for our SimpleSpeech 2.
 **Training a AR-based duration model**
@@ -493,7 +493,7 @@ For the TTS task, we assess the performance from 4 aspects: intelligibility, spe
 Furthermore, we also conduct subjective evaluations for TTS.
 **Intelligibility**
 Word Error Rate (WER) is widely used to assess the intelligibility of generated speech.
-However, previous work ([Seed-TTS [8]](../Speech_LLM/2024.06.04_Seed-TTS.md)) suggests that WER may not serve as a definitive criterion; a lower WER often indicates that the model produces more ‘standardized’ speech, which is easier for ASR systems to recognize.
+However, previous work ([Seed-TTS [8]](../SpeechLM/2024.06.04_Seed-TTS.md)) suggests that WER may not serve as a definitive criterion; a lower WER often indicates that the model produces more ‘standardized’ speech, which is easier for ASR systems to recognize.
 To provide a more comprehensive evaluation, we propose using multiple ASR systems to assess the generated speech, employing the mean WER as the metric for comparison.
 In this study, we utilize the Whisper-large model and the Hubert-large-based ASR system to evaluate the robustness.
 **Speaker Similarity**
@@ -553,7 +553,7 @@ In this study, our proposed model also does not rely on phoneme-level alignment 
 From Table \ref{table:tts}, we can see that SimpleSpeech 2 shows better robustness than previous AR-based works, \textit{e.g.} SimpleSpeech 2 is more robust than VALL-EX, ChatTTS, VoiceCraft in our English evaluation set.
 Compared with phoneme duration-driven NAR systems, our method is still behind some NAR-based models, such as HierSpeech++.
 We believe that the gap can be eliminated by scaling data.
-The concurrent work, [Seed-TTS [8]](../Speech_LLM/2024.06.04_Seed-TTS.md), also uses a similar strategy to us, they show that the system can be more robust after training with large-scale data.
+The concurrent work, [Seed-TTS [8]](../SpeechLM/2024.06.04_Seed-TTS.md), also uses a similar strategy to us, they show that the system can be more robust after training with large-scale data.
 
 **Generation Speed**
 In general, AR-based large TTS models will cost a lot of time in inference because they generate speech tokens one by one.
@@ -602,7 +602,7 @@ In this study, we employ a state-of-the-art (SOTA) open-sourced ASR model, Whisp
 In this part, we explore which type of sentence duration is better.
 From Table \ref{tab:ablation-duration}, we observe that (1) Four types of sentence duration models are effective. (2) Compared to specialized models, ChatGPT performs poorly in predicting sentence duration.
 One reason for this is the instability of ChatGPT’s predictions, which sometimes produce extreme cases, such as overly short predicted durations.
-Although increasing the number of demonstration samples in the prompt and averaging multiple runs can mitigate this issue, it also significantly raises inference costs. (3) ByT5-based predictors and the duration predictor of [FastSpeech2 [2]](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) demonstrate greater stability than AR-based phoneme duration predictors.
+Although increasing the number of demonstration samples in the prompt and averaging multiple runs can mitigate this issue, it also significantly raises inference costs. (3) ByT5-based predictors and the duration predictor of [FastSpeech2 [2]](../Acoustic/2020.06.08_FastSpeech2.md) demonstrate greater stability than AR-based phoneme duration predictors.
 Considering both cost and simplicity, we recommend using the ByT5-based sentence duration predictor as default choice.
 Fig. \ref{fig:du-vis} illustrates how SimpleSpeech 2 can synthesize diverse prosodies using different sentence durations.
 
