--- a/Models/SpeechRepresentation/2021.06.14_HuBERT.md
+++ b/Models/SpeechRepresentation/2021.06.14_HuBERT.md
@@ -338,6 +338,67 @@ Higher PNMI also indicates better k-means clustering quality.
 
 ## 5·Results: 结果
 
+### Main Results: Low- and High-Resource Setups
+
+Table~\ref{tab:main_lo} presents results for the low-resource setup, where pre-trained models are fine-tuned on 10 minutes, 1 hour, 10 hours, or 100 hours of labeled data. We include comparison with semi-supervised (iterative pseudo labeling (IPL)~\cite{xu2020iterative}, slimIPL~\cite{likhomanenko2020slimipl}, noisy student~\cite{park2020improved}) and self-supervised approaches (DeCoAR 2.0~\cite{ling2020decoar}, DiscreteBERT~\cite{baevski2019effectiveness}, wav2vec 2.0~\cite{baevski2020wav2vec}) in the literature.
+Increasing the amount of unlabeled data and increasing the model size improve performance, demonstrating the scalability of the proposed HuBERT self-supervised pre-training method.
+In the ultra-low resource setup with just 10 minutes of labeled data, the HuBERT \textsc{Large} model can achieve a WER of 4.7\% on the test-clean set and 7.6\% on the test-other set, which is 0.1\% and 0.6\% WER lower, respectively than the state-of-the-art wav2vec 2.0 \textsc{Large} model. By further scaling up the model size to 1B parameters, the HuBERT \textsc{X-Large} model can further reduce the WER to 4.6\% and 6.8\% on test-clean and test-other. The superiority of HuBERT persists across setups with different amounts of labeled data, with the only exceptions being fine-tuning on 100 hours of labeled data, where HuBERT \textsc{Large} is 0.1\% WER higher than wav2vec 2.0 \textsc{Large} on test-clean, and HuBERT \textsc{Base} is 0.1\% WER higher than wav2vec 2.0 \textsc{Base} on test-other.
+In addition, HuBERT also outperforms DiscreteBERT by a large margin in all setups, while both are trained with a virtually identical objective - masked prediction of discovered units. The considerable performance gap suggests two things. First, using waveform as the input to the model is crucial for avoiding loss of information during quantization. Second, while vq-wav2vec~\cite{baevski2019vq}, the units that DiscreteBERT uses for training, may discover better units than k-means clustering of MFCC features, the proposed iterative refinement benefits from the improving HuBERT model and learn better units eventually. We will verify these statements in the ablation study sections.
+
+We report results of fine-tuning HuBERT models on the full 960 hours of Librispeech data and compare with the literature in Table~\ref{tab:main_hi}. Prior studies using additional unpaired speech are classified into:
+
+- self-training: first train an ASR on labeled data to annotate unlabeled speech, and then combine both golden and ASR-annotated text-speech pairs for supervised training.
+- pre-training: first use unlabeled speech for pre-training a model, and then fine-tune the model on labeled data with a supervised training objective.
+- pre-training + self-training: first pre-train and fine-tune a model, and then use it to annotate unlabeled speech for self-training combined with supervised data.
+
+HuBERT outperforms the state-of-the-art supervised and self-training methods and is on par with the two best pre-training results in the literature; both are based on wav2vec 2.0 contrastive learning.
+In contrast, it lags behind methods combining pre-training with self-training. However, as observed in \cite{xu2020self} and \cite{zhang2020pushing}, we expect that HuBERT can achieve comparable or better performance after combining with self-training, since the pre-trained HuBERT model is on par or better than the pre-trained model those two methods use for pseudo labeling.
+
+### Analysis: K-Means Stability
+
+To better understand why masked prediction of discovered units is effective, we conduct a series of analyses and ablation studies. We start with probing the stability of the k-means clustering algorithm concerning different numbers of clusters and different sizes of its training data.
+Two features are considered: 39-dimensional MFCC features and 768-dimensional output from the 6-th transformer layer of the first iteration HuBERT-\textsc{Base} model. These two features are used to produce cluster assignments for the first and the second iteration HUBERT training, respectively.
+
+For k-means clustering, we consider $K=\{100,500\}$ clusters fitted on \{1, 10, 100\} hours of speech sampled from the LibriSpeech training split. Each combination of the hyperparameters and the features are trained for 10 trials, and the mean and standard deviation of the supervised PNMI metric on the development set (combining dev-clean and dev-other from LibriSpeech) is reported in Table~\ref{tab:stability}.
+The results show that the k-means clustering is reasonably stable given the small standard deviations across different hyperparameters and features. Furthermore, increasing the amount of data used for fitting k-means models improves PNMI in general, but the gain is only as much as 0.012, suggesting the feasibility of using k-means for unit discovery even with limited CPU memory relative to the feature matrix size. Lastly, the PNMI score is much higher when clustering on HuBERT features than clustering on MFCC features, and the gap is even larger with 500 clusters, indicating that iterative refinement significantly improves the clustering quality.
+
+### Analysis: Clustering Quality Across Layers and Iterations
+
+We next study how each layer of the HuBERT model from each iteration performs when used for clustering to generate training targets.
+The two \textsc{Base} HuBERT models from the first two iterations as described in Section~\ref{sec:pretrain} are considered, which are referred to as \textsc{Base}-it1 and \textsc{Base}-it2, respectively. There are 26 features representing 12 transformer layers plus the input to the first transformer layer (denoted as ``Layer 0'') from the two HuBERT models.
+For each feature, we fit three k-means models ($K=\{100, 500, 1000\}$ clusters) on a 100 hour subset randomly sampled from the LibriSpeech training data. The teacher quality measured in cluster purity, phone purity, and phone normalized mutual information (PNMI) is shown in Figure~\ref{fig:qual_layer}.
+As a baseline, MFCC achieves (cluster purity, phone purity, PNMI) = (0.099, 0.335, 0.255) for $K=100$ and (0.031, 0.356, 0.287) for $K=500$.
+
+Both \textsc{Base}-it1 and \textsc{Base}-it2 features result in significantly better clustering quality on all three metrics than MFCC with the same number of clusters. On the other hand, the best \textsc{Base}-it2 feature is better than the best \textsc{Base}-it1 on phone purity and PNMI, but slightly worse on cluster purity.
+Finally, we observe different trends across layers from \textsc{Base}-it1 and \textsc{Base}-it2: while \textsc{Base}-it2 model features generally improve over layers, \textsc{Base}-it1 has the best features in the middle layers around the 6th layer. Interestingly, the quality of the last few layers degrades dramatically for \textsc{Base}-it1, potentially because it is trained on target assignments of worse quality, and therefore the last few layers learn to mimic their bad label behavior.
+
+### Ablation: The Importance of Predicting Masked Frames
+
+We present a series of ablation studies in the following sections to learn how pre-training objective, cluster quality, and hyperparameters affect the performance.
+The models for ablation studies are pre-trained for 100k steps and fine-tuned on the 10-hour libri-light split using fixed hyperaprameters. MFCC-based k-means units with C=100 are used if not otherwise mentioned. We report WERs on the dev-other set decoded with the $n$-gram language model using fixed decoding hyperparameters.
+
+To understand the importance of our proposal to predict the masked frames only, we compare three conditions: 1) predicting masked frames, 2) predicting all frames, and 3) predicting unmasked frames, which can be simulated by setting $\alpha$ to 1.0, 0.5, and 0.0, respectively.
+We are comparing three k-means models learned from clustering MFCC teachers with 50, 100, 500 clusters, one learned from clustering HuBERT-\textsc{Base}-it1 6th transformer layer features, and supervised labels obtained from the forced-alignment of character-based HMM models (chenone)~\cite{le2019senones}.
+
+Results shown in Table~\ref{tab:loss} indicate that when learning from bad cluster assignments, computing loss only from the masked regions achieves the best performance, while the inclusion of unmasked loss results in significantly higher WERs.
+However, as the clustering quality improves, the model would suffer less when computing losses on the unmasked frames (\textsc{Base}-it1-layer6) or even achieve better performance as the case of chenone.
+
+### Ablation: The Effect of Cluster Ensembles
+
+To understand the effect of combining multiple k-means models for generating targets, we consider two setups. The first one has k-means models of different numbers of clusters presented in Table~\ref{tab:loss}, denoted with KM-\{50,100,500\}. The second one has k-means models trained on spliced MFCC features with a window of three; hence, each input feature is represented as a 117-dimensional vector. In this second case, we apply product quantization on the spliced features, where dimensions are split into the coefficients of the zeroth, first, and second-order derivatives, with each 39-dimensional subspace quantized to a codebook of 100 entries. We denote these codebooks with Product k-means-\{0,1,2\}-100, respectively.
+By comparing the results from Table~\ref{tab:loss} and Table~\ref{tab:ens}, it is clear that using an ensemble leads to better performance than what a single k-means clustering can achieve.
+
+### Ablation: Impact of Hyperparameters
+
+Figure~\ref{fig:prob_bs} and Table~\ref{tab:step} studies how hyperparameters affect HuBERT pre-training.
+It is shown that
+
+- the portion of frames selected as mask start is optimal at $p=$8\%;
+- increasing the batch size can significantly improve the performance; % (20\% WER reduction when increasing the batch size by 8 times);
+- training for longer consistently helps for both k-means models with C=\{50, 100\}, and the best model achieves a WER of 11.68\%.
+
+These findings are also consistent with those from BERT-like models~\cite{clark2020electra}. In addition, we include a comparable result from DiscreteBERT~\cite{baevski2019effectiveness} in Table~\ref{tab:step} which applies k-means to quantize the same MFCC features into 13.5k units, used as both the output and the \textit{input} to the BERT model. Besides using continuous speech input rather than discrete units, We hypothesize that HuBERT achieves significantly better performance because its fewer k-means clusters of 100 or 500 help capture broad phonetic concepts without delving into inter/intra-speaker variation.
+
 ## 6·Conclusions: 结论
 
 <details>
